# battaglia_navale

./: .gitignore  CMakeLists.txt  PROBLEMS.txt  README.md  README.txt
docs/: schema.txt
file_log_richiesti/: log_computerVScomuter.txt  log_umanoVScomputer.txt
include/: BattleShip.h  Battlefield.h  Computer.h  Coordinate.h  Human.h  NavalUnit.h  Player.h  Submarine.h  SupportVessel.h
src/: BattleShip.cpp  Battlefield.cpp  Computer.cpp  Coordinate.cpp  Human.cpp  Submarine.cpp  SupportVessel.cpp  battaglia_navale.cpp  replay.cpp
